--- a/Coder_house/Tps/finalproyect/css/estilos.css
+++ b/Coder_house/Tps/finalproyect/css/estilos.css
@@ -5,7 +5,7 @@ h1{
     font-size: 30px;
     display: flex;
     justify-content: center;
-    color: rgb(13, 3, 62);
+    color: rgb(255, 255, 255);
 
 }
 .aceites {
@@ -13,13 +13,13 @@ h1{
     height: 250px;
     width: 250px;
 }
-#listadoDeProductos {
+#listaArticulos {
     display: flex;
     justify-content:space-around;
     
 }
-#detalleDeCompra {
-    background-color: rgb(41, 4, 50);
+#detallePedido {
+    background-color: rgb(177, 28, 214);
     height: 200px;
     width: auto;
     padding-top: 20px;
